# scrapy-zyte-api

./: .bumpversion.cfg  .bumpversion.toml  .coveragerc  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGES.rst  README.md  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: publish.yml  scrapy-unreleased.yml  test.yml
docs/: conf.py  index.rst  requirements.in  requirements.txt  setup.rst
docs/_ext/: __init__.py
docs/first-steps/: scrapy-poet.rst  setup.rst
docs/reference/: fingerprint-params.rst  inputs.rst  meta.rst  request.rst  response.rst  settings.rst  stats.rst
docs/usage/: actions.rst  automap.rst  default.rst  fingerprint.rst  manual.rst  proxy-mode.rst  proxy.rst  redirect.rst  referer.rst  request-mode.rst  request-transport.rst  retry.rst  scrapy-poet.rst  session.rst  stats.rst  transparent.rst
scrapy_zyte_api/: __init__.py  _annotations.py  _cookies.py  _downloader_middleware.py  _middlewares.py  _page_inputs.py  _params.py  _poet_item_pipelines.py  _provider_fingerprint_cache.py  _proxy.py  _request_fingerprinter.py  _request_mode.py  _request_transport.py  _request_type.py  _serialization.py  _session.py  _utils.py  addon.py  exceptions.py  handler.py  page_inputs.py  poet.py  providers.py  responses.py  utils.py
tests/: __init__.py  conftest.py  helpers.py  mockserver.py  requirements.txt  test_addon.py  test_annotations.py  test_api_requests.py  test_auto_field_stats.py  test_downloader_middleware.py  test_forbidden_domains.py  test_handler.py  test_handler_proxy.py  test_middlewares.py  test_params.py  test_provider_transport.py  test_providers.py  test_proxy.py  test_referer.py  test_request_fingerprinter.py  test_request_fingerprinter_transport.py  test_responses.py  test_serialization.py  test_sessions.py  test_sessions_assign.py  test_sessions_check_custom.py  test_sessions_check_default.py  test_sessions_check_errors.py  test_sessions_close.py  test_sessions_config.py  test_sessions_cookie_mode.py  test_sessions_cookies.py  test_sessions_enabled.py  test_sessions_errors.py  test_sessions_init_actions.py  test_sessions_init_bad.py  test_sessions_init_location.py  test_sessions_init_location_config.py  test_sessions_init_precedence.py  test_sessions_init_server_errors.py  (+14 more)
